style (hackathon): fix past evnts on mobile

--- a/_sass/minima/hackathon-2/_layout.scss
+++ b/_sass/minima/hackathon-2/_layout.scss
@@ -499,7 +499,11 @@
 #past-events {
   .past-events-list {
     display: grid;
-    grid-template-columns: repeat(auto-fit, calc(min(100%, 290px)));
+
+    @include xs {
+      grid-template-columns: 1fr;
+    }
+    grid-template-columns: repeat(auto-fit, minmax(290px, 1fr));
 
     a:hover {
       color: inherit;
